# laeg

./: .gitignore  README.md
maps/: castle.map  corridors.map  office.map  shop.map  sparse.map
src/loop_exploration/: CMakeLists.txt  Setup.cmake  package.xml  phi-rosaria.rviz
src/loop_exploration/configs/: config_sample_file.ini
src/loop_exploration/description/sensors_meshes/: ptu_d46_base_link.stl  ptu_d46_pan_link.stl  ptu_d46_tilt_link.stl
src/loop_exploration/description/urdf/: common.xacro  p3at_sonar.urdf.xacro  p3dx.urdf.xacro  pioneer3at.urdf.xacro  pioneer3at.urdf_old.xacro  pioneer3at_ptu.urdf.xacro  pioneer3dx-rosaria.urdf.xacro  pioneer3dx-rosaria2.urdf.xacro  pioneer3dx.urdf.xacro  pioneer3dx_wheel.xacro  pointgrey_flea3.urdf.xacro  ptu_d46.urdf.xacro  sick_lms100.urdf.xacro  sick_lms100_2.urdf.xacro  sonar_sensor.urdf.xacro
src/loop_exploration/launch/: rosaria.launch
src/loop_exploration/src/: cell.cpp  cell.h  colors.h  configuration.cpp  configuration.h  glut_class.cpp  glut_class.h  grid.cpp  grid.h  laeg.cpp  laeg.h  logger.cpp  logger.h  loop_exploration.cpp  loop_exploration.h  main.cpp  pioneer_base.cpp  pioneer_base.h  pioneer_base_ros.cpp  pioneer_base_ros.h  planning.cpp  planning.h  robot.cpp  robot.h  thinning.cpp  thinning.h  utils.cpp  utils.h
src/rosaria_phi/: CMakeLists.txt  LaserPublisher.cpp  LaserPublisher.h  RosAria.cpp  package.xml
src/rosaria_phi/cfg/: RosAria.cfg
