<!--
 This file is part of LAEG
 Copyright 2022:
 - Diego Pittol <dpittol at inf dot ufrgs dot br> (Phi Robotics Research Lab - UFRGS)
 - Renan Maffei <rqmaffei at in dot ufrgs dot br> (Phi Robotics Research Lab - UFRGS)
 - Vitor Jorge
 For more information see <https://github.com/phir2-lab/laeg>
 
 LAEG is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 LAEG is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with LAEG If not, see <https://www.gnu.org/licenses/>.
-->

<package>

  <name>loop_exploration</name>
  <version>0.0.1</version>
  <description>The LAEG and Loop Exploration package</description>
  <maintainer email="diegokindin@gmail.com">Diego Pittol</maintainer> 
  <license>GNU</license>
  <author email="diegokindin@gmail.com">Diego Pittol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>

</package>
